--- a/22-projects/typing-speed/src/index.css
+++ b/22-projects/typing-speed/src/index.css
@@ -13,13 +13,43 @@ html , body{
 }
 
 main{
-    display: flex;
     height: 100vh;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
+}
+
+.hello {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
     flex-direction: column;
-    gap: 20px;
+    align-items: center;
+    gap: 10px;
+}
+
+.world {
+    position: absolute;
+    top: 80px;
+    left: 220px;
+    /* transform: translate( -50%); */
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    gap: 10px;
+}
+
+.thamuz {
+    position: absolute;
+    top: 150px;
+    right: 210px;
+    display: flex;
+}
+.thamuz button{
+    background-color: darkcyan;
+}
+.thamuz button:active{
+    scale: 1.1;
 }
 
 button{
@@ -37,9 +67,22 @@ button:active{
     scale: 0.9;
 }
 
-#textarea{
+textarea{
     height: 200px;
-    width: 1000px;
+    width: 800px;
     font-size: 19px;
     padding: 10px;
+}
+
+.progress-container{
+    height: 60px;
+    width: 500px;
+    background-color: black;
+    padding: 10px;
+}
+
+.progress-bar{
+    background-color: white;
+    transition: width 0.5s linear;
+    height: 40px;
 }
